# isar

./: Dockerfile  Dockerfile_new  pyproject.toml
.github/workflows/: publish_isar_base_image.yml  pythonpackage.yml  pythonpublish.yml
